1단계 - 스트림, 람다, Optional (#2058)